tests/machine/x/ocaml/binary_precedence.ml

let () =
  print_endline ((1 + 2) * 3)
  print_endline (((1 + 2)) * 3)
  print_endline ((2 * 3) + 1)
  print_endline (2 * ((3 + 1)))
